.archive/nas/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.kokoro.wtf/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.ctec.run
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.7.0.2
      # lbipam.cilium.io/ips: 10.0.2.142
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ctec-run-tls
# ---
# # yaml-language-server: $schema=https://k8s-schemas.kokoro.wtf/gateway.envoyproxy.k8s.io/envoypatchpolicy_v1alpha1.json
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: EnvoyPatchPolicy
# metadata:
#   name: envoy-internal
# spec:
#   jsonPatches:
#     - type: type.googleapis.com/envoy.config.listener.v3.Listener
#       name: network/envoy-internal/https
#       operation: &operation
#         op: add
#         jsonPath: ..filters[*].typed_config.http_filters[?(@.name=="envoy.filters.http.compressor.zstd")].typed_config
#         value:
#           "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
#           choose_first: true
#           compressor_library:
#             name: envoy.compression.zstd.compressor
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.compression.zstd.compressor.v3.Zstd
#           response_direction_config:
#             remove_accept_encoding_header: true
#     - type: type.googleapis.com/envoy.config.listener.v3.Listener
#       name: network/envoy-external/https-quic
#       operation: *operation
#   targetRef:
#     group: gateway.networking.k8s.io
#     kind: Gateway
#     name: envoy-external
#   type: JSONPatch
